# md-opener

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  biome.json  index.html  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: AGENTS.md  RELEASING.md  VISION.md
docs/homebrew/: md-opener.rb
integrations/vscode/: .vscodeignore  CHANGELOG.md  README.md  package.json  tsconfig.json
landing/: README.md  index.html
samples/: agent-plan.md  showcase.md
scripts/: build-sidecars.sh  generate-icons.sh
src/: App.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/bins/mdopen/: Cargo.toml
src-tauri/bins/mdopen/src/: main.rs
src-tauri/bins/mdopener-afm/: Package.swift  build.sh
src-tauri/bins/mdopener-afm/Sources/mdopener-afm/: main.swift
src-tauri/bins/mdopener-mcp/: Cargo.toml
src-tauri/bins/mdopener-mcp/src/: main.rs
src-tauri/bins/mdopener-setdefault/Sources/mdopener-setdefault/: main.swift
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity.rs  afm.rs  agent_setup.rs  ai.rs  cli_install.rs  deep_link.rs  default_handler.rs  document.rs  embed.rs  export.rs  file_handler.rs  ipc.rs  lib.rs  main.rs  run.rs  search.rs  secrets.rs  watcher.rs
src/ai/: actions.ts  bridge.ts  inline.ts  registry.ts  types.ts
src/components/: ActivationBanner.tsx  ActivityDrawer.tsx  DefaultHandlerBanner.tsx  DigestCard.tsx  Outline.tsx  Toast.tsx  Welcome.tsx
src/lib/: activity.ts  agent-detect.ts  canvas.test.ts  canvas.ts  commands.ts  copyRichText.test.ts  copyRichText.ts  crossSearch.ts  defaultHandler.ts  diff.test.ts  diff.ts  domFind.test.ts  domFind.ts  embedSearch.ts  export.ts  frontmatter.test.ts  frontmatter.ts  keymap.ts  libraryContext.ts  notify.ts  openFile.ts  outline.test.ts  outline.ts  pasteImage.ts  remark-callouts.ts  remark-comments.ts  remark-highlights.ts  remark-wikilinks.test.ts  remark-wikilinks.ts  reviewDoc.test.ts  reviewDoc.ts  sanitizeSchema.test.ts  sanitizeSchema.ts  session.ts  shiki.ts  sourceSearchBridge.ts  syncScroll.ts  tasklist.test.ts  tasklist.ts  updater.ts  (+6 more)
src/mcp/: applyEdit.test.ts  applyEdit.ts  bridge.ts
src/store/: activationStore.test.ts  activationStore.ts  activityStore.ts  aiStore.ts  digestStore.ts  documentStore.test.ts  documentStore.ts  memoryStore.test.ts  memoryStore.ts  recentStore.ts  (+6 more)
(+63 files in other folders)
