[workspace]
members = [".", "bins/mdopen", "bins/mdopener-mcp"]
resolver = "2"

[package]
name = "md-opener"
version = "0.1.0"
description = "MD Opener — an AI-native Markdown app for the agentic era"
authors = ["MD Opener contributors"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "md_opener_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
urlencoding = "2"
tiny_http = "0.12"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }

# Windows-only: read/write HKCU registry keys for default-app association.
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
