[package]
name = "mdopen"
version = "0.1.0"
description = "CLI helper — open Markdown files in MD Opener via the mdopener:// URL scheme"
authors = ["MD Opener contributors"]
license = "MIT"
edition = "2021"

[[bin]]
name = "mdopen"
path = "src/main.rs"

[dependencies]
# Percent-encodes the file path before embedding it in the URL.
urlencoding = "2"
# Parses the Claude Code hook JSON payload from stdin (--hook mode).
serde_json = "1"
