[package]
name = "mdopener-mcp"
version = "0.1.0"
description = "MCP (Model Context Protocol) server for MD Opener — lets coding agents drive the app"
authors = ["MD Opener contributors"]
license = "MIT"
edition = "2021"

[[bin]]
name = "mdopener-mcp"
path = "src/main.rs"

[dependencies]
# JSON-RPC serialisation / deserialisation.
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Percent-encode paths for mdopener:// URLs.
urlencoding = "2"

# Resolve ~ in paths.
dirs = "5"
